--- a/index.html
+++ b/index.html
@@ -3209,7 +3209,7 @@
 			{
 				initPayload: '/greet',
 				customData: { language: "en" },
-				socketUrl: "http://localhost:5005",
+				socketUrl: "https://rasa-chatbot-deployment.herokuapp.com/",
 				title: 'Saathi'
 				// add other props here
 			},
